automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 
 <script> 
 
+const main = document.getElementById('main')
+ 
+main.addEventListener('click', function(event) {
+  alert('I was clicked!')
+})
+
 const divs = document.querySelectorAll('div')
  
 function bubble(e) {
