--- a/index.html
+++ b/index.html
@@ -39,16 +39,32 @@
     </div>
   </body>
 </html>
-<script> 
+
+<script>
+
+const main = document.getElementById('main')
+
+main.addEventListener('click', function(event) {
+  alert('I was clicked!')
+})
+
 const divs = document.querySelectorAll('div')
- 
+
 function bubble(e) {
   e.stopPropagation()
- 
+
   console.log(this.firstChild.nodeValue.trim() + ' bubbled')
 }
- 
+
 for (let i = 0; i < divs.length; i++) {
   divs[i].addEventListener('click', bubble)
-} 
+}
+
+const main = document.getElementById('main')
+
+main.addEventListener('click', function(event) {
+  alert('I was clicked!')
+})
+
+
 </script>
